--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
-  },
-  "devDependencies": {}
+    "express": "^4.21.0",
+    "express-session": "^1.18.0"
+  }
 }
