--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI='mongodb+srv://alexyeh365:0Dfyobv72gBt91MK@icarus-app-db.q2zp7.mongodb.net/users?retryWrites=true&w=majority&appName=icarus-app-db'
-SESSION_SECRET=EXPRESS_SESSION_SECRET
+SESSION_SECRET='mySuperSecureSessionSecret123!'
+NODE_ENV='production'
